RESOLVED FIXED101735
[Qt] Fix installation of QtWebProcess binary
https://bugs.webkit.org/show_bug.cgi?id=101735
Summary [Qt] Fix installation of QtWebProcess binary
Simon Hausmann
Reported 2012-11-09 03:06:23 PST
There are a few issues with QtWebProcess right now: (1) It has to be in the PATH (2) However it should be in libexec (3) The file name should be versioned. We should implement something like Shane's proposal from http://lists.qt-project.org/pipermail/development/2012-October/007423.html
Attachments
Patch (7.29 KB, patch)
2012-11-28 09:44 PST, Andras Becsi
no flags
Simon Hausmann
Comment 1 2012-11-19 01:27:13 PST
Zeno fixed the first part in http://trac.webkit.org/changeset/134161 by falling back to QLibraryInfo's BinariesPath. As discussed with Ossi, the next step is the introduction of libexec in Qt and then we can move QtWebProcess there.
Simon Hausmann
Comment 2 2012-11-28 04:35:56 PST
After https://codereview.qt-project.org/#change,38225 landed in qtbase, libexecdir is now available :)
Andras Becsi
Comment 3 2012-11-28 09:44:51 PST
Simon Hausmann
Comment 4 2012-11-29 00:04:16 PST
Comment on attachment 176498 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=176498&action=review > Source/WebKit2/Shared/qt/ProcessExecutablePathQt.cpp:51 > +#if USE(LIBEXECDIR) > + expectedPath = QLibraryInfo::location(QLibraryInfo::LibraryExecutablesPath) + QDir::separator() + baseName; > + if (QFile::exists(expectedPath)) > + return String(expectedPath); > +#endif > + > expectedPath = QLibraryInfo::location(QLibraryInfo::BinariesPath) + QDir::separator() + baseName; > if (QFile::exists(expectedPath)) > return String(expectedPath); This could be an #else ... #endif here. Feel free to change before landing :)
Simon Hausmann
Comment 5 2012-11-29 00:19:12 PST
Comment on attachment 176498 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=176498&action=review >> Source/WebKit2/Shared/qt/ProcessExecutablePathQt.cpp:51 >> return String(expectedPath); > > This could be an #else ... #endif here. Feel free to change before landing :) Alternatively you could introduce a QLibraryInfo::LibraryLocation variable to pass to ::location() and set it according to the #ifdef. That might be cleaner/shorter.
Simon Hausmann
Comment 6 2012-11-29 02:57:59 PST
Landed manually with suggested change for swift integration into qt5.git Committed r136116: <http://trac.webkit.org/changeset/136116>
Andras Becsi
Comment 7 2012-11-29 03:05:25 PST
Comment on attachment 176498 [details] Patch Thanks, Simon.
Note You need to log in before you can comment on or make changes to this bug.