[Qt] Fix installation of QtWebProcess binary https://bugs.webkit.org/show_bug.cgi?id=101735

Patch by Andras Becsi <andras.becsi@digia.com> on 2012-11-29
Reviewed by Simon Hausmann.

Source/WebKit2:

If available use QLibraryInfo::LibraryExecutablesPath to find
the web process and the plugin process and deploy both helper
processes to QT_INSTALL_LIBEXECS.

The effective fallback used to find the helper processes becomes:
    1. Application directory
    2. Qt library executables directory (QLibraryInfo::LibraryExecutablesPath)
    3. Qt binaries directory (QLibraryInfo::BinariesPath)
    4. No absolute path used

* PluginProcess.pro:
* Shared/qt/ProcessExecutablePathQt.cpp:
(WebKit::executablePath):
* WebProcess.pro:

Tools:

Add config test to detect the availability of support
for "program executables" in Qt (libexec).

This test can be removed after the Qt5 release.

* Tools.pro:
* qmake/mkspecs/features/features.prf:
* qmake/config.tests/libexecdir/libexecdir.cpp:
* qmake/config.tests/libexecdir/libexecdir.pro:

Canonical link: https://commits.webkit.org/121736@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136116 268f45cc-cd09-0410-ab3c-d52691b4dbfc