Source/WebKit2/Shared/qt/ProcessExecutablePathQt.cpp
@@ -40,7 +40,12 @@ static String executablePath(QString baseName)
     if (QFile::exists(expectedPath))
         return String(expectedPath);
 
-    expectedPath = QLibraryInfo::location(QLibraryInfo::BinariesPath) + QDir::separator() + baseName;
+    QLibraryInfo::LibraryLocation location = QLibraryInfo::BinariesPath;
+#if USE(LIBEXECDIR)
+    location = QLibraryInfo::LibraryExecutablesPath;
+#endif
+
+    expectedPath = QLibraryInfo::location(location) + QDir::separator() + baseName;
     if (QFile::exists(expectedPath))
         return String(expectedPath);
 
