Tools/qmake/config.tests/libexecdir/libexecdir.pro
@@ -1,0 +1,4 @@
+SOURCES = libexecdir.cpp
+OBJECTS_DIR = obj
+CONFIG += qt
+QT -= gui
